<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.snir.shelfbook.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.snir.shelfbook.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.snir.shelfbook.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_books_list"
        android:name="com.snir.shelfbook.ui.booklist.BookListFragment"
        android:label="fragment_book_list"
        tools:layout="@layout/fragment_book_list">
        <action
            android:id="@+id/action_books_list_to_bookDetailsFragment"
            app:destination="@id/bookDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookDetailsFragment"
        android:name="com.snir.shelfbook.ui.bookdetail.BookDetailsFragment"
        android:label="fragment_book_details"
        tools:layout="@layout/fragment_book_details" >
    </fragment>
</navigation>